# pesto

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.dev.yml  docker-compose.yml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  FUNDING.yml
.github/workflows/: codeql.yml  master.yml  pr.yml  release.yml  sdk-release.yml  sdks-check.yml  sdks-nightly.yml  sdks-pr.yml  sdks-release.yml  sdks.yml  secret-scan.yml  systems-nightly.yml  systems-pr.yml  systems-release.yml
auth/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  authenticate.go  authenticate_test.go  go.mod  go.sum  healthz.go  healthz_test.go  main.go  main_test.go
auth/src/: main.rs
auth_rust/: Cargo.toml  Dockerfile
auth_rust/src/: main.rs
dogfood/: .editorconfig  .eslintrc.json  .gitignore  LICENSE  README.md  c.test.js  cpp.test.js  go.test.js  javascript.test.js  julia.test.js  lua.test.js  main.test.js  package-lock.json  package.json  php.test.js  python.test.js  sqlite3.test.js  test.js  typescript.test.js
dogfood/snapshots/: 99_bottles
landing/: .gitignore  Dockerfile  README.md  astro.config.mjs  deno.json  deps.ts  deps_lock.json  error.html  fresh.gen.ts  import_map.json  index.html  main.js  main.ts  mod.ts  package-lock.json  package.json  pnpm-lock.yaml  sentry.client.config.ts  sentry.server.config.ts  server.mjs  style.css  tsconfig.json
landing/app/: app.ts  config.ts  error.ts  logger.ts
landing/components/: ButtonLink.tsx  FieldList.tsx  Footer.tsx  GuideSection.tsx  Layout.tsx  Logo.tsx  Section.tsx  Seo.tsx
landing/islands/: BackToTop.tsx  Form.tsx
landing/routes/: _404.tsx  _500.tsx  _app.tsx  index.tsx
rce/: .editorconfig  .env.example  .eslintignore  .eslintrc.json  .gitignore  .nycrc  Dockerfile  Dockerfile.dev  README.md  ava.config.cjs  ava.config.js  biome.json  build.js  package-lock.json  package.json  tsconfig.json
redis/: Dockerfile  README.md  redis.conf
registration/: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  Dockerfile.old  Program.cs  README.md  Registration.csproj  Registration.sln  appsettings.Development.json  appsettings.json  pom.xml
registration_rust/: Cargo.toml  Dockerfile
registration_rust/src/: main.rs
sdk/: README.md  bump-nightly.py
(+197 files in other folders)
