[package]
name = "auth_rust"
version = "0.1.0"
authors = ["Reinaldy Rafli <aldy505@proton.me>"]
repository = "https://github.com/teknologi-umum/pesto"
edition = "2021"
license = "GPL-3.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
redis = { version = "0.25.2", features = ["tokio-comp", "aio"] }