[package]
name = "registration_rust"
version = "0.1.0"
authors = ["Reinaldy Rafli <aldy505@proton.me>"]
repository = "https://github.com/teknologi-umum/pesto"
edition = "2021"
license = "GPL-3.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
redis = { version = "0.25.3", features = ["tokio-comp", "aio"] }
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }
reqwest = { version = "0.12.3", features = ["json", "gzip"] }
chrono = "0.4.37"
sentry = { version = "0.32.2", features = ["tracing", "UNSTABLE_metrics"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["std", "registry", "tracing"] }
rand = "0.8.5"